# Ackerman_minCell

./: .gitignore
src/main_bot/: CMakeLists.txt  package.xml
src/main_bot/config/: controller_gz_sim.yaml  ekf.yaml  gz_bridge.yaml  mapper_params_online_async.yaml  nav2_param.yaml
src/main_bot/description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/main_bot/launch/: display.launch.py  gazebo.launch.py  slam_mapping.launch.py
src/main_bot/overtake/ov_inc/: offset_planner.hpp  safety_monitor.hpp  state_machine.hpp
src/main_bot/overtake/ov_src/: offset_planner.cpp  overtake_node.cpp  safety_monitor.cpp  state_machine.cpp
src/main_bot/scripts/: lane_control_node.py  lane_follower_node.py  odom_tf_relay.py  overtake_vision_node.py
src/main_bot/scripts/vision/: __init__.py  ai_detector.py  estimator.py  processor.py  transformer.py
src/main_bot/src/: lane_control_node.cpp
src/main_bot/worlds/: race_way.world  world.sdf
src/main_bot/worlds/npc/: npc_driver_node.cpp
